Sprint 3: Payments, Notifications, AI Query Engine
- Stripe Connect: landlord onboarding flow, /api/stripe/connect endpoint
- Stripe Webhooks: handle account.updated, payment_intent.succeeded/failed
- Tenant Payment Flow: ACH + card via Stripe, payment page with lease selection
- Auto Late Fees: /api/cron/late-fees checks overdue entries past grace period
- Email Notifications (Resend): rent reminder, payment receipt, lease expiry, overdue alerts
- SMS via GHL: rent due reminder, overdue alert, emergency maintenance
- Notification Cron: /api/cron/notifications with dedup tracking
- AI Query Engine: /api/ai/query using MiniMax M2.1, NL→SQL→Supabase RPC
- AI Chat Widget: floating chat UI on landlord dashboard
- DB Migration: notifications table updates, execute_readonly_query RPC
- Settings page: Stripe connect/manage UI with status indicators
- .env.example updated with MINIMAX_API_KEY

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# Stripe
+# Stripe (test mode)
 STRIPE_SECRET_KEY=sk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
@@ -15,8 +15,9 @@ GHL_LOCATION_ID=3aZ7eyR2G1clRLLwUKz3
 # Resend (Email)
 RESEND_API_KEY=re_...
 
-# OpenAI (AI Queries)
-OPENAI_API_KEY=sk-...
+# MiniMax AI (for AI Query Engine)
+# Get your API key from https://www.minimax.io
+MINIMAX_API_KEY=your_minimax_api_key
 
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
